# ai-voice-assistant

./: .gitignore  build_error.txt  latency_changes.txt  main.py  pyproject.toml  streamlit_app.py  test_format.py  test_tool.py  test_tool_schema.py  test_tool_schema_v2.py  test_tool_schema_v3.py
agent/: check_api.py  factory.py  list_rooms.py  main.py  manual_dispatch.py
backend/: check_events.py  main.py  reset_db.py  scratch_list_calls.py  scratch_query.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: agents.py  auth.py  calls.py  dashboard.py  freeswitch.py  integrations.py  keys.py  numbers.py  providers.py  sessions.py  settings.py  telephony.py  tools.py  twilio.py
backend/app/core/: config.py  security.py
backend/app/core/integrations/: google_utils.py
backend/app/db/: session.py
backend/app/models/: agent.py  orm.py
backend/app/services/: billing_service.py  freeswitch_media_gateway.py  freeswitch_service.py  livekit_service.py  phone_numbers_service.py  sip_service.py  sip_trunk_service.py
backend/scratch/: check_cols.py  fix_db_column.py  update_integrations_db.py
backend/scripts/: check_users.py  create_initial_user.py  reinit_db.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentAvatar.tsx  AgentCard.tsx  BackButton.tsx  DecommissionModal.tsx  Sidebar.tsx  TelephonyPanel.tsx  ToolManager.tsx  VoiceSession.tsx
frontend/src/components/ui/: Select.tsx
frontend/src/pages/: AgentsPage.tsx  AnalyticsPage.tsx  CallLogsPage.tsx  ComingSoonPage.tsx  CreateAgentPage.tsx  DashboardPage.tsx  IntegrationsPage.tsx  KeysPage.tsx  LoginPage.tsx  ProfilePage.tsx  ProvidersPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TelephonyPage.tsx  ToolsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: useAgentStore.ts  useAuthStore.ts  useThemeStore.ts
logs/: filtered.txt  mic_test.txt  sarvam_path.txt  session_last.txt  user_said.txt  vad_check.txt
ruff/: n8n_tester.py
scratch/: check_db_agents.py  check_ids.py  clear_ramu_secrets.py  fix_ramu.py  inspect_agents.py  migrate_llm_models.py  test_decrypt.py  test_livekit.py  test_sarvam_tts.py  view_agents.py  view_connections.py
src/: agent.py  property.json  test_sarvam.py
src/data/: property.json
src/tools/: search_tools.py
src/utils/: city_matcher.py
tests/: test_agent.py  test_backend_agents.py  test_backend_tools.py  test_twilio_telephony.py
